MDEV-17654: Incorrect syntax returned for column with CHECK constraint in the SHOW CREATE TABLE ...